fix: 디렉터리 이동 및 빌드, 테스트 통과 확인

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,12 @@ kotlin.code.style=official
 kotlin.mpp.enableCInteropCommonization=true
 kotlin.mpp.androidSourceSetLayoutVersion=2
 
+# Native ?? ???? ??? ???
+kotlin.native.ignoreDisabledTargets=true
+
+# ?? Hierarchy Template ????
+kotlin.mpp.applyDefaultHierarchyTemplate=false
+
 # Performance optimizations
 org.gradle.parallel=true
 org.gradle.caching=true
