refactor!: split into core/commerce/engineering modules & target JDK 8
- created :core, :commerce, :engineering sub-projects
- moved shared code to :core
- set sourceCompatibility / targetCompatibility to 1.8

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ kotlin.code.style=official
 kotlin.mpp.enableCInteropCommonization=true
 kotlin.mpp.androidSourceSetLayoutVersion=2
 
-# Native ?? ???? ??? ???
+# Native ?? ?? ??
 kotlin.native.ignoreDisabledTargets=true
 
 # ?? Hierarchy Template ????
@@ -20,3 +20,18 @@ org.gradle.jvmargs=-Xmx2048m -XX:+UseParallelGC
 # Kotlin/Native settings
 kotlin.native.binary.memoryModel=experimental
 kotlin.native.binary.freezing=disabled
+
+# Java 8 ??? ??
+kotlin.jvm.target=1.8
+java.sourceCompatibility=1.8
+java.targetCompatibility=1.8
+
+# ??? ??
+dokka.outputFormat=html
+dokka.outputDirectory=./build/dokka
+
+# ?? ?? (??? ?? ??? ?? ??)
+# sonatype.user=your-username
+# sonatype.password=your-password
+# signingKey=your-signing-key
+# signingPassword=your-signing-password
