--- a/gradle.properties
+++ b/gradle.properties
@@ -1,37 +1,28 @@
+# Kotlin ?? ?? ??? ??
 kotlin.code.style=official
+
+# Kotlin Multiplatform ??
 kotlin.mpp.enableCInteropCommonization=true
 kotlin.mpp.androidSourceSetLayoutVersion=2
-
-# Native ?? ?? ??
-kotlin.native.ignoreDisabledTargets=true
-
-# ?? Hierarchy Template ????
 kotlin.mpp.applyDefaultHierarchyTemplate=false
 
-# Performance optimizations
+# Kotlin/Native ?? (???? ??? experimental? ?? ?? ??)
+kotlin.native.ignoreDisabledTargets=true
+kotlin.native.binary.memoryModel=experimental
+kotlin.native.binary.freezing=disabled
+
+# ?? ?? ???
 org.gradle.parallel=true
 org.gradle.caching=true
 org.gradle.configureondemand=true
 kotlin.incremental=true
 
-# JVM settings
-org.gradle.jvmargs=-Xmx2048m -XX:+UseParallelGC
-
-# Kotlin/Native settings
-kotlin.native.binary.memoryModel=experimental
-kotlin.native.binary.freezing=disabled
-
-# Java 8 ??? ??
+# JVM ??? ??
 kotlin.jvm.target=1.8
 java.sourceCompatibility=1.8
 java.targetCompatibility=1.8
+org.gradle.jvmargs=-Xmx2048m -XX:+UseParallelGC
 
-# ??? ??
+# Dokka ?? ??
 dokka.outputFormat=html
 dokka.outputDirectory=./build/dokka
-
-# ?? ?? (??? ?? ??? ?? ??)
-# sonatype.user=your-username
-# sonatype.password=your-password
-# signingKey=your-signing-key
-# signingPassword=your-signing-password
