--- a/gradle.properties
+++ b/gradle.properties
@@ -26,3 +26,6 @@ org.gradle.jvmargs=-Xmx2048m -XX:+UseParallelGC
 # Dokka ?? ??
 dokka.outputFormat=html
 dokka.outputDirectory=./build/dokka
+
+centralPortalUsername=vkKFMo/Y
+centralPortalPassword=ZoiSBXjskc0rFwsFEI+LRvF0vXo0/bFtytxY6k6/Hc4p
