--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,8 +11,6 @@ on:
         required: true
         type: string
 
-permissions:
-  contents: write
 
 jobs:
   build-and-test:
@@ -103,7 +101,7 @@ jobs:
       if: startsWith(github.ref, 'refs/tags/')
       uses: actions/create-release@v1
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GH_PAT }}
       with:
         tag_name: ${{ github.ref }}
         release_name: ECU Core ${{ env.VERSION }}
@@ -135,7 +133,7 @@ jobs:
       if: startsWith(github.ref, 'refs/tags/')
       uses: actions/upload-release-asset@v1
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GH_PAT }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ecu-core/build/libs/ecu-core-${{ env.VERSION }}.jar
