--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,8 @@ on:
         required: true
         type: string
 
+permissions:
+  contents: write
 
 jobs:
   build-and-test:
@@ -99,17 +101,15 @@ jobs:
     
     - name: Create GitHub Release
       if: startsWith(github.ref, 'refs/tags/')
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+      uses: softprops/action-gh-release@v1
       with:
-        tag_name: ${{ github.ref }}
-        release_name: ECU Core ${{ env.VERSION }}
+        name: ECU Core v${{ env.VERSION }}
+        tag_name: v${{ env.VERSION }}
         body: |
           ## ECU Core Library v${{ env.VERSION }}
-          
+
           ### Installation
-          
+
           #### Maven
           ```xml
           <dependency>
@@ -118,16 +118,16 @@ jobs:
               <version>${{ env.VERSION }}</version>
           </dependency>
           ```
-          
+
           #### Gradle
           ```kotlin
           implementation("io.github.je1113:ecu-core:${{ env.VERSION }}")
           ```
-          
+
           ### What's New
-          See [CHANGELOG.md](https://github.com/je1113/engineering-commerce-units/blob/main/CHANGELOG.md) for details.
-        draft: false
-        prerelease: false
+          See [CHANGELOG.md](https://github.com/je1113/engineering-commerce-units/blob/main/CHANGELOG.md)
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     
     - name: Upload Release Assets
       if: startsWith(github.ref, 'refs/tags/')
