--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -91,9 +91,25 @@ jobs:
         ./gradlew :ecu-core:build
         ./gradlew :ecu-core:dokkaJavadoc
     
+    - name: Debug credentials (safe)
+      run: |
+        echo "CENTRAL_TOKEN is set: $([[ -n "$CENTRAL_TOKEN" ]] && echo "yes" || echo "no")"
+        echo "CENTRAL_SECRET is set: $([[ -n "$CENTRAL_SECRET" ]] && echo "yes" || echo "no")"
+        echo "Token length: ${#CENTRAL_TOKEN}"
+        echo "Secret length: ${#CENTRAL_SECRET}"
+        # First 4 characters only for debugging
+        echo "Token starts with: ${CENTRAL_TOKEN:0:4}***"
+    
+    - name: Test credentials with curl
+      run: |
+        curl -u "$CENTRAL_TOKEN:$CENTRAL_SECRET" \
+             -X GET \
+             "https://central.sonatype.com/api/v1/publisher/status" \
+             -v
+    
     - name: Publish to Maven Central
       run: |
-        ./gradlew :ecu-core:publishMavenPublicationToOSSRHRepository --info
+        ./gradlew :ecu-core:publishMavenPublicationToOSSRHRepository --info --stacktrace
       env:
         CENTRAL_TOKEN: ${{ secrets.CENTRAL_TOKEN }}
         CENTRAL_SECRET: ${{ secrets.CENTRAL_SECRET }}
