fix: resolve Java toolchain issues in Windows CI environment

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,28 +1,24 @@
-# Kotlin ?? ?? ??? ??
 kotlin.code.style=official
 
-# Kotlin Multiplatform ??
 kotlin.mpp.enableCInteropCommonization=true
 kotlin.mpp.androidSourceSetLayoutVersion=2
 kotlin.mpp.applyDefaultHierarchyTemplate=false
 
-# Kotlin/Native ?? (???? ??? experimental? ?? ?? ??)
 kotlin.native.ignoreDisabledTargets=true
 kotlin.native.binary.memoryModel=experimental
 kotlin.native.binary.freezing=disabled
 
-# ?? ?? ???
 org.gradle.parallel=true
 org.gradle.caching=true
 org.gradle.configureondemand=true
 kotlin.incremental=true
 
-# JVM ??? ??
 kotlin.jvm.target=1.8
 java.sourceCompatibility=1.8
 java.targetCompatibility=1.8
 org.gradle.jvmargs=-Xmx2048m -XX:+UseParallelGC
 
-# Dokka ?? ??
+org.gradle.java.installations.auto-download=true
+
 dokka.outputFormat=html
 dokka.outputDirectory=./build/dokka
