--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,14 +71,14 @@ jobs:
       run: |
         VERSION=${GITHUB_REF#refs/tags/v}
         echo "VERSION=$VERSION" >> $GITHUB_ENV
-        sed -i "s/version = \"1.0.0-SNAPSHOT\"/version = \"$VERSION\"/" build.gradle.kts
+        sed -i "s/version = \"1.0.0\"/version = \"$VERSION\"/" build.gradle.kts
     
     - name: Set version from input
       if: github.event_name == 'workflow_dispatch'
       run: |
         VERSION=${{ inputs.version }}
         echo "VERSION=$VERSION" >> $GITHUB_ENV
-        sed -i "s/version = \"1.0.0-SNAPSHOT\"/version = \"$VERSION\"/" build.gradle.kts
+        sed -i "s/version = \"1.0.0\"/version = \"$VERSION\"/" build.gradle.kts
     
     - name: Build release artifacts
       run: |
